--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@types/node": "^20",
+    "@types/estree": "^1.0.8",
+    "@types/json-schema": "^7.0.15",
+    "@types/node": "^20.19.4",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/stylis": "^4.2.7",
     "eslint": "^9",
     "eslint-config-next": "15.3.4",
     "typescript": "^5"
